--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@types/aos": "^3.0.4",
     "aos": "^3.0.0-beta.6",
-    "next": "12.3.0",
+    "next": "^12.3.1-canary.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.5",
