--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^12.3.1-canary.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-howler": "^5.2.0",
     "styled-components": "^5.3.5",
     "typewriter-effect": "^2.19.0"
   },
